[project]
name = "comfyui-inpaint-cropandstitch-linearized"
description = "Enhanced ComfyUI Inpaint CropAndStitch with Linearized Rescaling by Pablo Apiolazza. The '✂️ Inpaint Crop (Linearized)' and '✂️ Inpaint Stitch (Linearized)' nodes enable inpainting only on masked areas with professional color accuracy through sRGB ↔ linear color space conversion during resizing operations."
version = "2.2.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch",
    "comfy-core"
]

[project.urls]
Repository = "https://github.com/APZmedia/ComfyUI-Inpaint-CropAndStitch-Linearized"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "APZmedia"
DisplayName = "ComfyUI-Inpaint-CropAndStitch-Linearized"
Icon = ""
